reports/Strassen_Algorithm_Exercise.err.log
Traceback (most recent call last):
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/georg/anaconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def matrix_times_matrix(A,B):
    """
    A,B are numpy arrays such that A*B is defined.
    The function returns a numpy array C which is the Matrix product of A and B
    """
    
    n,k=A.shape
    k,m=B.shape


    C=np.zeros(# define here the shape of the resulting matrix c

    for i in range(n):
        for j in range(m):
            for s in range(k):
                C[i,j]+= # Add the corresponding number according to the sum Formula 

    return C
------------------

[0;36m  Cell [0;32mIn[2], line 11[0;36m[0m
[0;31m    C=np.zeros(# define here the shape of the resulting matrix c[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m '(' was never closed

SyntaxError: '(' was never closed (2589907741.py, line 11)

